--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="ua">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#63b945">
-    <meta name="msapplication-navbutton-color" content="#63b945">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#63b945">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link href="css/style.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <main>
-      <div>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Решила даже, пор свою пунктуация дороге, себя, курсивных продолжил сих букв, наш ipsum рот но она текстов то! Назад, переписали.</div>
-      <h1>lotrem</h1>
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/script.min.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="ua"><head><meta charset="UTF-8"><meta name="keywords" content=""><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="theme-color" content="#63b945"><meta name="msapplication-navbutton-color" content="#63b945"><meta name="apple-mobile-web-app-status-bar-style" content="#63b945"><link rel="shortcut icon" href="images/favicon.png"><link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet"><link href="css/style.min.css" rel="stylesheet"></head><body><main></main><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script><script src="js/script.min.js"></script></body></html>
