--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,33 @@
     <meta name="msapplication-navbutton-color" content="#63b945">
     <meta name="apple-mobile-web-app-status-bar-style" content="#63b945">
     <link rel="shortcut icon" href="images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
-    <main>
-      <div>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Решила даже, пор свою пунктуация дороге, себя, курсивных продолжил сих букв, наш ipsum рот но она текстов то! Назад, переписали.</div>
-      <h1>lotrem</h1>
-    </main>
+    <section class="promo">
+      <header class="header">
+        <div class="header__inner">
+          <div class="header__logo"><img src="../img/logo.svg" width="138" height="35" alt="MPS Development"></div>
+          <nav class="menu">
+            <button class="menu__toggle" type="button">show/hide menu</button>
+            <ul class="menu__list">
+              <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">Tea</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
+              <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <div class="promo__text">
+        <h1 class="promo__title">WELCOME TO MPS DEVELOPMENT</h1>
+        <p class="promo__subtitle">Professional software engineering services</p>
+        <div class="promo__slogan"></div>
+      </div>
+    </section>
+    <main></main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
   </body>
