--- a/src/index.html
+++ b/src/index.html
@@ -18,21 +18,24 @@
         <div class="header__inner">
           <div class="header__logo"><img src="../img/logo.svg" width="138" height="35" alt="MPS Development"></div>
           <nav class="menu">
-            <button class="menu__toggle" type="button">show/hide menu</button>
-            <ul class="menu__list">
-              <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-              <li class="menu__item"><a class="menu__link" href="#">Tea</a></li>
-              <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
-              <li class="menu__item"><a class="menu__link" href="#">Portfolio</a></li>
-              <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
-            </ul>
+            <button class="menu__toggle" type="button">show/hide menu<span class="menu__toggle-line"></span></button>
+            <!--ul.menu__list-->
+            <!--  li.menu__item-->
+            <!--    a(class='menu__link', href="#") About-->
+            <!--  li.menu__item-->
+            <!--    a(class='menu__link', href="#") Team-->
+            <!--  li.menu__item-->
+            <!--    a(class='menu__link', href="#") Services-->
+            <!--  li.menu__item-->
+            <!--    a(class='menu__link', href="#") Portfolio-->
+            <!--  li.menu__item-->
+            <!--    a(class='menu__link', href="#") Contact-->
           </nav>
         </div>
       </header>
       <div class="promo__text">
         <h1 class="promo__title">WELCOME TO MPS DEVELOPMENT</h1>
         <p class="promo__subtitle">Professional software engineering services</p>
-        <div class="promo__slogan"></div>
       </div>
     </section>
     <main></main>
