--- a/src/index.html
+++ b/src/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-<html lang="ua">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#63b945">
-    <meta name="msapplication-navbutton-color" content="#63b945">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#63b945">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <section class="promo">
-      <header class="header">
-        <div class="header__inner">
-          <div class="header__logo"><img src="../img/logo.svg" width="138" height="35" alt="MPS Development"></div>
-          <nav class="menu">
-            <button class="menu__toggle" type="button">show/hide menu<span class="menu__toggle-line"></span></button>
-            <!--ul.menu__list-->
-            <!--  li.menu__item-->
-            <!--    a(class='menu__link', href="#") About-->
-            <!--  li.menu__item-->
-            <!--    a(class='menu__link', href="#") Team-->
-            <!--  li.menu__item-->
-            <!--    a(class='menu__link', href="#") Services-->
-            <!--  li.menu__item-->
-            <!--    a(class='menu__link', href="#") Portfolio-->
-            <!--  li.menu__item-->
-            <!--    a(class='menu__link', href="#") Contact-->
-          </nav>
-        </div>
-      </header>
-      <div class="promo__text">
-        <h1 class="promo__title">WELCOME TO MPS DEVELOPMENT</h1>
-        <p class="promo__subtitle">Professional software engineering services</p>
-      </div>
-    </section>
-    <main>
-      <section class="about">
-        <div class="about-wrap">
-          <h2 class="about__title">About&nbsp;us</h2>
-          <p class="about__txt txt--bold">We&nbsp;bring your ideas to&nbsp;life.</p>
-          <p class="about__txt">Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.</p>
-          <p class="about__txt">We&nbsp;follow modern approaches to&nbsp;minimize solution cost and improve overall quality:</p>
-          <ul class="about__list">
-            <li class="about__item">Automated software testing</li>
-            <li class="about__item">Prototyping</li>
-            <li class="about__item">UI/UX</li>
-            <li class="about__item">Agile (Scrum, Kanban) and Waterfall methodologies</li>
-            <li class="about__item">MVP Development</li>
-            <li class="about__item">Postproduction support</li>
-            <li class="about__item">Employee training</li>
-            <li class="about__item">User and administrator documentation</li>
-          </ul><a class="btn" href="assets/MPSCompanyPresentationWEB.pdf" target="_blank">Company presentation</a>
-        </div>
-      </section>
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/script.min.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="ua"><head><meta charset="UTF-8"><meta name="keywords" content=""><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="theme-color" content="#63b945"><meta name="msapplication-navbutton-color" content="#63b945"><meta name="apple-mobile-web-app-status-bar-style" content="#63b945"><link rel="shortcut icon" href="images/favicon.png"><link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet"><link href="css/style.min.css" rel="stylesheet"></head><body><section class="promo"><header class="header"><div class="header__inner"><div class="header__logo"><img src="../img/logo.svg" width="138" height="35" alt="MPS Development"></div><nav class="menu"><button class="menu__toggle" type="button">show/hide menu<span class="menu__toggle-line"></span></button><!--ul.menu__list--><!--  li.menu__item--><!--    a(class='menu__link', href="#") About--><!--  li.menu__item--><!--    a(class='menu__link', href="#") Team--><!--  li.menu__item--><!--    a(class='menu__link', href="#") Services--><!--  li.menu__item--><!--    a(class='menu__link', href="#") Portfolio--><!--  li.menu__item--><!--    a(class='menu__link', href="#") Contact--></nav></div></header><div class="promo__text"><h1 class="promo__title">WELCOME TO MPS DEVELOPMENT</h1><p class="promo__subtitle">Professional software engineering services</p></div></section><main><section class="about"><div class="about-wrap"><div class="about__img-wrap"><img class="about__img" src="img/about.png" alt="Abou Us"></div><h2 class="about__title">About&nbsp;us</h2><p class="about__txt txt--bold">We&nbsp;bring your ideas to&nbsp;life.</p><p class="about__txt">Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.</p><p class="about__txt">We&nbsp;follow modern approaches to&nbsp;minimize solution cost and improve overall quality:</p><ul class="about__list"><li class="about__item">Automated software testing</li><li class="about__item">Prototyping</li><li class="about__item">UI/UX</li><li class="about__item">Agile (Scrum, Kanban) and Waterfall methodologies</li><li class="about__item">MVP Development</li><li class="about__item">Postproduction support</li><li class="about__item">Employee training</li><li class="about__item">User and administrator documentation</li></ul><a class="about__btn" href="assets/MPSCompanyPresentationWEB.pdf" target="_blank">Company presentation</a></div></section></main><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script><script src="js/script.min.js"></script></body></html>
